[package]
name = "chain-registry"
description = "A library for interacting with the Cosmos chain registry repository"
authors = ["Collin Brittain"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/peggyjv/chain-registry"
readme = "README.md"

[dependencies]
assay = "0.1"
eyre = "0.6"
http = "0.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["cache"]
cache = []
