[package]
name = "chain-registry"
description = "A library for interacting with the Cosmos chain registry repository"
authors = ["Collin Brittain"]
version = "0.2.0-rc2"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/chain-registry/latest/chain-registry/"
repository = "https://github.com/peggyjv/chain-registry"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assay = "0.1"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }

reqwest-crate = { package = "reqwest", version = "^0.11", features = [
    "json",
], default-features = false, optional = true }

[features]
default = ["cache", "reqwest"]
cache = []

reqwest = ["reqwest-crate", "reqwest-crate/default-tls"]
reqwest-rustls = ["reqwest-crate", "reqwest-crate/rustls-tls"]
reqwest-blocking = ["reqwest-crate/blocking"]
